# PickByLight

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: lightarray.yaml  params.yaml
include/: hmiCmd.h  lightarray_generated.h
launch/: hmiCmd.launch  lightarray_broadcaster.launch
lib/: lineMarker.cpp  lineMarker.h
msg/: ObjRecognised.msg  ObjRecognisedArr.msg
src/: hmiCmd.cpp  lightarray_generated.cpp
